test/syntax/07-type-err.c
// ======================================================================

/* type -> INT
         | CHAR
         | VOID
         | struct_type */

// ======================================================================

extern intt *ip;	// error: not int

void main(void)
{

}

// ======================================================================
